--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,13 +3,17 @@
         "es2021": true,
         "node": true
     },
-    "extends": ["plugin:react/recommended", "standard-with-typescript"],
+    "extends": [
+        "plugin:react/recommended",
+        "standard-with-typescript",
+        "plugin:@typescript-eslint/stylistic"
+    ],
     "overrides": [],
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module"
     },
-    "plugins": ["react"],
+    "plugins": ["react", "@stylistic"],
     "rules": {
         // ダブルクォーテーションのみ許可
         "quotes": ["error", "double"],
@@ -23,6 +27,27 @@
         // React17以降の新しいJSX変換を使用しているため無効化
         "react/react-in-jsx-scope": 0,
         // インデント検知を無効化
-        "@typescript-eslint/indent": "off"
+        "@typescript-eslint/indent": "off",
+        // 型成型の際はtypeのみ
+        "@typescript-eslint/consistent-type-definitions": ["error", "type"],
+        // 型成型の際の中身の文末にはセミコロンを必ず付ける
+        "@typescript-eslint/member-delimiter-style": [
+            "error",
+            {
+                "singleline": {
+                    "delimiter": "semi",
+                    "requireLast": true
+                }
+            }
+        ],
+        "@stylistic/member-delimiter-style": [
+            "error",
+            {
+                "singleline": {
+                    "delimiter": "semi",
+                    "requireLast": true
+                }
+            }
+        ]
     }
 }
