--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@stylistic/eslint-plugin": "^1.5.3",
     "@types/react": "~18.2.14",
     "@typescript-eslint/eslint-plugin": "^6.17.0",
     "eslint": "^8.56.0",
