--- a/package.json
+++ b/package.json
@@ -1,37 +1,40 @@
 {
-    "name": "memoapp2",
-    "version": "1.0.0",
-    "main": "expo-router/entry",
-    "scripts": {
-        "start": "expo start",
-        "android": "expo start --android",
-        "ios": "expo start --ios",
-        "web": "expo start --web"
-    },
-    "dependencies": {
-        "expo": "~49.0.15",
-        "expo-status-bar": "~1.6.0",
-        "react": "18.2.0",
-        "react-native": "0.72.6",
-        "expo-router": "^2.0.0",
-        "react-native-safe-area-context": "4.6.3",
-        "react-native-screens": "~3.22.0",
-        "expo-linking": "~5.0.2",
-        "expo-constants": "~14.4.2",
-        "react-native-gesture-handler": "~2.12.0"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.20.0",
-        "@stylistic/eslint-plugin": "^1.5.3",
-        "@types/react": "~18.2.14",
-        "@typescript-eslint/eslint-plugin": "^6.17.0",
-        "eslint": "^8.56.0",
-        "eslint-config-standard-with-typescript": "^43.0.0",
-        "eslint-plugin-import": "^2.29.1",
-        "eslint-plugin-n": "^16.6.1",
-        "eslint-plugin-promise": "^6.1.1",
-        "eslint-plugin-react": "^7.33.2",
-        "typescript": "^5.3.3"
-    },
-    "private": true
+  "name": "memoapp2",
+  "version": "1.0.0",
+  "main": "expo-router/entry",
+  "scripts": {
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web"
+  },
+  "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
+    "expo": "~49.0.15",
+    "expo-constants": "~14.4.2",
+    "expo-font": "~11.4.0",
+    "expo-linking": "~5.0.2",
+    "expo-module-scripts": "^3.1.0",
+    "expo-router": "^2.0.0",
+    "expo-status-bar": "~1.6.0",
+    "react": "18.2.0",
+    "react-native": "0.72.6",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.0",
+    "@stylistic/eslint-plugin": "^1.5.3",
+    "@types/react": "~18.2.14",
+    "@typescript-eslint/eslint-plugin": "^6.17.0",
+    "eslint": "^8.56.0",
+    "eslint-config-standard-with-typescript": "^43.0.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.6.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.33.2",
+    "typescript": "^5.3.3"
+  },
+  "private": true
 }
